--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -7,6 +7,7 @@
     <title>Catalog</title>
     <!--<link rel="stylesheet" href="../CSS/mainPage.css">-->
     <link rel="stylesheet" href="../CSS/navbar.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-fMIoX8a+x/5RoFKxHR9R5dzrdBptOYXN61YVPUmTr3uau1EL4itQGHEzZa8Fb1SHhvOJyTDMWskNx3P7RfyNA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../CSS/mainPageFooter.css">
@@ -19,18 +20,31 @@
 </head>
 <body>
 	<nav class="navBar">
-        
+
 		<a href="../HTML/MainPage.html">Home</a>
 		<a href="CatalogPage.html">Catalog</a>
 		<a href="#">Parts</a>
 		<a href="../HTML/contactUs.html">Contact Us</a>
 		<a href="AboutUs.html">About Us</a>
 		<a href="#" class="toggle-button">&#9776;</a>
-	  
-	</nav>
-	<br><br>
+		
+	</nav> 
+
     <div class="secondDiv">
-		<h1>Here you can find all the products:</h1>
+		<br>
+		<div class="button">
+			<button type="button" class="btn btn-light">
+				<i class="fas fa-star"></i> Best Products
+			</button>
+			<button type="button" class="btn btn-light">
+				<i class="fas fa-truck"></i> Fast Delivery
+			</button>
+			<button type="button" class="btn btn-light">
+				<i class="fas fa-shield-alt"></i> Safe Payment
+			</button>
+		</div>
+		<br>
+		<br>
 		<!-- Link to jQuery -->
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
@@ -311,256 +325,6 @@
 				<div class="product-info smart-form">
 					<div class="row">
 						<div class="col-md-6 col-sm-6 col-xs-6"> 
-							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<div class="rating">
-								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end product -->
-</div>
-<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
-	<!-- product -->
-	<div class="product-content product-wrap clearfix">
-		<div class="row">
-				<div class="col-md-5 col-sm-12 col-xs-12">
-					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
-						<span class="tag2 hot">
-							HOT
-						</span> 
-					</div>
-				</div>
-				<div class="col-md-7 col-sm-12 col-xs-12">
-				<div class="product-deatil">
-						<h5 class="name">
-							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
-							</a>
-						</h5>
-						<p class="price-container">
-							<span>$800.00</span>
-						</p>
-						<span class="tag1"></span> 
-				</div>
-				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-				<br>
-					</div>
-				<div class="product-info smart-form">
-					<div class="row">
-						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
-							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<div class="rating">
-								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end product -->
-</div>
-<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
-	<!-- product -->
-	<div class="product-content product-wrap clearfix">
-		<div class="row">
-				<div class="col-md-5 col-sm-12 col-xs-12">
-					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
-						<span class="tag2 hot">
-							HOT
-						</span> 
-					</div>
-				</div>
-				<div class="col-md-7 col-sm-12 col-xs-12">
-				<div class="product-deatil">
-						<h5 class="name">
-							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
-							</a>
-						</h5>
-						<p class="price-container">
-							<span>$800.00</span>
-						</p>
-						<span class="tag1"></span> 
-				</div>
-				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-				<br>
-					</div>
-				<div class="product-info smart-form">
-					<div class="row">
-						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
-							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<div class="rating">
-								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end product -->
-</div>
-<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
-	<!-- product -->
-	<div class="product-content product-wrap clearfix">
-		<div class="row">
-				<div class="col-md-5 col-sm-12 col-xs-12">
-					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
-						<span class="tag2 hot">
-							HOT
-						</span> 
-					</div>
-				</div>
-				<div class="col-md-7 col-sm-12 col-xs-12">
-				<div class="product-deatil">
-						<h5 class="name">
-							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
-							</a>
-						</h5>
-						<p class="price-container">
-							<span>$800.00</span>
-						</p>
-						<span class="tag1"></span> 
-				</div>
-				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-				<br>
-					</div>
-				<div class="product-info smart-form">
-					<div class="row">
-						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
-							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<div class="rating">
-								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end product -->
-</div>
-<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
-	<!-- product -->
-	<div class="product-content product-wrap clearfix">
-		<div class="row">
-				<div class="col-md-5 col-sm-12 col-xs-12">
-					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
-						<span class="tag2 hot">
-							HOT
-						</span> 
-					</div>
-				</div>
-				<div class="col-md-7 col-sm-12 col-xs-12">
-				<div class="product-deatil">
-						<h5 class="name">
-							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
-							</a>
-						</h5>
-						<p class="price-container">
-							<span>$800.00</span>
-						</p>
-						<span class="tag1"></span> 
-				</div>
-				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-				<br>
-					</div>
-				<div class="product-info smart-form">
-					<div class="row">
-						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
-							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<div class="rating">
-								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end product -->
-</div>
-<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
-	<!-- product -->
-	<div class="product-content product-wrap clearfix">
-		<div class="row">
-				<div class="col-md-5 col-sm-12 col-xs-12">
-					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
-						<span class="tag2 hot">
-							HOT
-						</span> 
-					</div>
-				</div>
-				<div class="col-md-7 col-sm-12 col-xs-12">
-				<div class="product-deatil">
-						<h5 class="name">
-							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
-							</a>
-						</h5>
-						<p class="price-container">
-							<span>$800.00</span>
-						</p>
-						<span class="tag1"></span> 
-				</div>
-				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-				<br>
-					</div>
-				<div class="product-info smart-form">
-					<div class="row">
-						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
 							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6">
