--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -18,7 +18,7 @@
     <nav class="navBar">
         
           <a href="../HTML/MainPage.html">Home</a>
-          <a href="../HTML/">Catalog</a>
+          <a href="../HTML/CatalogPage.html">Catalog</a>
           <a href="#">Parts</a>
           <a href="../HTML/contactUs.html">Contact Us</a>
           <a href="../HTML/AboutUs.html">About Us</a>
