--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pc Hub</title>
+    <title>Pc Hub-About us</title>
     <link rel="icon" href="../Photo/icon.ico"  sizes="96x96" type="image/icon type" >
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
