--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -4,7 +4,9 @@
     <!---->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog</title>
+    <title>PC Hub-Catalog</title>
+    <link rel="icon" href="../Photo/icon.ico"  sizes="96x96" type="image/icon type" >
+
     <!--<link rel="stylesheet" href="../CSS/mainPage.css">-->
     <link rel="stylesheet" href="../CSS/navbar.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-fMIoX8a+x/5RoFKxHR9R5dzrdBptOYXN61YVPUmTr3uau1EL4itQGHEzZa8Fb1SHhvOJyTDMWskNx3P7RfyNA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -45,11 +47,13 @@
 			</button>
 		</div>
 
-<!-- Add a search input field -->
-<input type="text" id="searchInput" placeholder="Search for laptops, desktops, or gaming laptops">
+		<div class="searchproducts">
+			<!-- Add a search input field -->
+            <input type="text" id="searchInput" placeholder="Search for laptops, desktops, or gaming laptops">
 
-<!-- Add a container to display the search results message -->
-<div id="searchResults"></div>
+            <!-- Add a container to display the search results message -->
+            <div id="searchResults"></div>
+	    </div>
 
 <script>
   // Function to filter products based on the search term
@@ -298,9 +302,9 @@
 	</div>
 	<!-- end product -->
 </div>
-<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys" data-type="laptop">
+<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys" data-type="gaming">
 	<!-- product -->
-	<div id="gaming laptop" class="product-content product-wrap clearfix" data-category="gaming laptop">
+	<div id="gaming" class="product-content product-wrap clearfix" data-category="gaming">
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
