--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -399,11 +399,11 @@
 </div>
 <div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
 	<!-- product -->
-	<div id="laptop" class="product-content product-wrap clearfix" data-category="laptop">
+	<div id="gaming" class="product-content product-wrap clearfix" data-category="gaming">
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
+					<br><br><br>	<img src="../Photo/gaming-lp2.jpg" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -413,17 +413,66 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
+								Asus ROG Zephyrus G14. <span>Gaming Laptop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$800.00</span>
+							<span>$1599.00</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
+					<p>Dynamic and ready to travel, the pioneering ROG Zephyrus G14 is the world’s most powerful 14-inch Windows 10 Pro gaming laptop.
+						 </p>
+				<br><br>
+					</div>
+				<div class="product-info smart-form">
+					<div class="row">
+						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
+							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
+						</div>
+						<div class="col-md-6 col-sm-6 col-xs-6">
+							<div class="rating">
+								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
+								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
+								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
+								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
+								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end product -->
+</div>
+<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
+	<!-- product -->
+	<div id="gaming" class="product-content product-wrap clearfix" data-category="gaming">
+		<div class="row">
+				<div class="col-md-5 col-sm-12 col-xs-12">
+					<div class="product-image"> 
+					<br><br><br>	<img src="../Photo/gaming-lp3.jpg" alt="194x228" class="img-responsive"> 
+						<span class="tag2 hot">
+							HOT
+						</span> 
+					</div>
+				</div>
+				<div class="col-md-7 col-sm-12 col-xs-12">
+				<div class="product-deatil">
+						<h5 class="name">
+							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
+								Asus Rog Strix G16 16″ <span>Gaming Laptop</span>
+							</a>
+						</h5>
+						<p class="price-container">
+							<span>$1738.77</span>
+						</p>
+						<span class="tag1"></span> 
+				</div>
+				<div class="description">
+					<p> Draw more frames and win more games with Windows 11, a 13th Gen Intel Core i9-13980HX processor, and an NVIDIA GeForce RTX 4070 Laptop GPU at 140W Max TGP </p>
 				<br>
 					</div>
 				<div class="product-info smart-form">
@@ -449,11 +498,11 @@
 </div>
 <div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
 	<!-- product -->
-	<div id="laptop" class="product-content product-wrap clearfix" data-category="laptop">
+	<div id="desktop" class="product-content product-wrap clearfix" data-category="desktop">
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
+					<br><br><br>	<img src="../Photo/hp-desktop.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -463,17 +512,16 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
+								HP Pavilion Desktop TP01-3055xt <span>Desktop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$800.00</span>
+							<span>$799.99</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
+					<p>Intel Core i7-12700 (2.1 GHz base frequency, up to 4.9 GHz with Intel Turbo Boost Technology, 25 MB L3 cache, 12 cores, 20 threads) </p>
 				<br>
 					</div>
 				<div class="product-info smart-form">
@@ -499,11 +547,11 @@
 </div>
 <div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
 	<!-- product -->
-	<div id="laptop" class="product-content product-wrap clearfix" data-category="laptop">
+	<div id="desktop" class="product-content product-wrap clearfix" data-category="desktop">
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
+					<br><br><br>	<img src="../Photo/xps1.webp" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -513,67 +561,16 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
+								XPS Desktop <span>Desktop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$800.00</span>
+							<span>$899.99</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-				<br>
-					</div>
-				<div class="product-info smart-form">
-					<div class="row">
-						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
-							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<div class="rating">
-								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
-								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
-								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end product -->
-</div>
-<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
-	<!-- product -->
-	<div id="laptop" class="product-content product-wrap clearfix" data-category="laptop">
-		<div class="row">
-				<div class="col-md-5 col-sm-12 col-xs-12">
-					<div class="product-image"> 
-					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
-						<span class="tag2 hot">
-							HOT
-						</span> 
-					</div>
-				</div>
-				<div class="col-md-7 col-sm-12 col-xs-12">
-				<div class="product-deatil">
-						<h5 class="name">
-							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
-							</a>
-						</h5>
-						<p class="price-container">
-							<span>$800.00</span>
-						</p>
-						<span class="tag1"></span> 
-				</div>
-				<div class="description">
-					<p>14” 2.8K OLED convertible laptop
-                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
+					<p>An elegant desktop that gives your ideas room to grow—with infinite expandability, monstrous performance and blazing-fast speeds. </p>
 				<br>
 					</div>
 				<div class="product-info smart-form">
