--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -27,14 +27,12 @@
 
 		<a href="../HTML/MainPage.html">Home</a>
 		<a href="CatalogPage.html">Catalog</a>
-		<a href="#">Parts</a>
+		<a href="../HTML/parts.html">Parts</a>
 		<a href="../HTML/contactUs.html">Contact Us</a>
 		<a href="AboutUs.html">About Us</a>
 		<a href="#" class="toggle-button">&#9776;</a>
 	  
 	</nav>
-	
-	<br><br>
     <div class="secondDiv">
 		<br>
 		<div class="button">
