--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -8,12 +8,10 @@
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../CSS/AbouUs.css">
-        <link rel="stylesheet" href="../CSS/mainPageFooter.css">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="../CSS/mainPageFooter.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="../CSS/navbar.css">
-
 </head>
 <body>
     <div class="mainDiv">
@@ -23,6 +21,7 @@
             <a href="../HTML/parts.html">Parts</a>
             <a href="../HTML/contactUs.html">Contact Us</a>
             <a href="../HTML/AboutUs.html">About Us</a>
+            <a href="#" class="toggle-button">&#9776;</a>
             <!-- per navigation barin -->
         </nav>
     </div>
