--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pc Hub-About Us</title>
-    <link rel="icon" href="../Photo/icon.ico"  sizes="96x96" type="image/icon type" >
+    <link rel="icon" href="../Photo/icon.ico" sizes="96x96" type="image/icon type">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../CSS/AbouUs.css">
@@ -13,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
+
 <body>
     <div class="mainDiv">
         <nav class="navBar">
@@ -25,99 +27,117 @@
             <!-- per navigation barin -->
         </nav>
     </div>
-        <div class="first-part">
-            <h1 class="abt-title">About Us</h1>
-            <div class="about">
-                <div class="parag">
-            <p class="abt-txt">
-                Welcome to PC Hub, your ultimate destination for all things PC-related! Established with a passion for technology and a commitment to customer satisfaction, PC Hub strives to provide the finest selection of top-notch computer hardware, software, and accessories.
-                Whether you are a seasoned gamer seeking cutting-edge graphics cards and peripherals or a professional looking to upgrade your workstation, our knowledgeable and friendly team is here to guide you on your tech journey. 
-                With a diverse range of products from leading brands and a focus on staying ahead of the latest trends, we aim to cater to every computing need. At PC Hub, we believe that building strong relationships with our customers is the key to success, and we take pride in delivering unparalleled service and support.
-                Discover the possibilities and unlock the true potential of your PC with PC Hub - your one-stop shop for all things computing! 
-            </p>
-                </div>
+    <div class="first-part">
+        <h1 class="abt-title">About Us</h1>
+        <div class="about">
+            <div class="parag">
+                <p class="abt-txt">
+                    Welcome to PC Hub, your ultimate destination for all things PC-related! Established with a passion
+                    for technology and a commitment to customer satisfaction, PC Hub strives to provide the finest
+                    selection of top-notch computer hardware, software, and accessories.
+                    Whether you are a seasoned gamer seeking cutting-edge graphics cards and peripherals or a
+                    professional looking to upgrade your workstation, our knowledgeable and friendly team is here to
+                    guide you on your tech journey.
+                    With a diverse range of products from leading brands and a focus on staying ahead of the latest
+                    trends, we aim to cater to every computing need. At PC Hub, we believe that building strong
+                    relationships with our customers is the key to success, and we take pride in delivering unparalleled
+                    service and support.
+                    Discover the possibilities and unlock the true potential of your PC with PC Hub - your one-stop shop
+                    for all things computing!
+                </p>
+            </div>
             <img src="../Photo/abt us.png" class="abt-photo">
+        </div>
+        <h1 class="abt-title">Our Mission</h1>
+        <div class="about">
+            <img src="../Photo/our mission.png" class="abt-photo">
+            <div class="parag">
+                <p class="abt-txt">
+                    At PC Hub, our mission is to empower and inspire individuals and businesses by providing them with
+                    exceptional PC solutions. We are committed to offering a curated selection of high-quality products
+                    that cater to various computing needs, from gaming enthusiasts to creative professionals and beyond.
+                    Our goal is to become a trusted partner for our customers, offering not only top-tier hardware and
+                    software but also expert advice and personalized support. We strive to create an inclusive and
+                    welcoming environment where technology enthusiasts can find their perfect PC components while
+                    fostering a community that shares their passion.
+                    With a focus on innovation, reliability, and continuous improvement, we aim to be at the forefront
+                    of the ever-evolving tech landscape, ensuring that our customers stay ahead in their digital
+                    pursuits.
+                    At PC Hub, we believe in the transformative power of technology, and we are dedicated to making the
+                    PC experience accessible, enjoyable, and truly rewarding for all.
+                </p>
             </div>
-            <h1 class="abt-title">Our Mission</h1>
-            <div class="about">
-                <img src="../Photo/our mission.png" class="abt-photo">
-                <div class="parag">
-                <p class="abt-txt">         
-                    At PC Hub, our mission is to empower and inspire individuals and businesses by providing them with exceptional PC solutions. We are committed to offering a curated selection of high-quality products that cater to various computing needs, from gaming enthusiasts to creative professionals and beyond. 
-                    Our goal is to become a trusted partner for our customers, offering not only top-tier hardware and software but also expert advice and personalized support. We strive to create an inclusive and welcoming environment where technology enthusiasts can find their perfect PC components while fostering a community that shares their passion.
-                    With a focus on innovation, reliability, and continuous improvement, we aim to be at the forefront of the ever-evolving tech landscape, ensuring that our customers stay ahead in their digital pursuits. 
-                    At PC Hub, we believe in the transformative power of technology, and we are dedicated to making the PC experience accessible, enjoyable, and truly rewarding for all.
-                 </p>
+        </div>
+        <div class="team">
+            <p class="abt-title">Meet Our Team</p>
+            <div class="team-carousel">
+                <div class="team-slide">
+                    <img src="../Photo/man5.png" class="team-mem">
+                    <h3>Kevin Pula</h3>
+                    <p>Software Engineer</p>
+                </div>
+                <div class="team-slide">
+                    <img src="../Photo/man6.png" class="team-mem">
+                    <h3>Paulin Sema</h3>
+                    <p>Front-end developer</p>
+                </div>
+                <div class="team-slide">
+                    <img src="../Photo/man3.png" class="team-mem">
+                    <h3>Angjelos Goga</h3>
+                    <p>Back-end developer</p>
+                </div>
+                <div class="team-slide">
+                    <img src="../Photo/man4.png" class="team-mem">
+                    <h3>Andi Sheta</h3>
+                    <p>Designer</p>
                 </div>
             </div>
-            <div class="team">
-                <p class="abt-title">Meet Our Team</p>
-                <div class="team-carousel">
-                    <div class="team-slide">
-                      <img src="../Photo/man5.png" class="team-mem">
-                      <h3>Kevin Pula</h3>
-                      <p>Software Engineer</p>
-                    </div>
-                    <div class="team-slide">
-                      <img src="../Photo/man6.png" class="team-mem">
-                      <h3>Paulin Sema</h3>
-                      <p>Front-end developer</p>
-                    </div>
-                    <div class="team-slide">
-                        <img src="../Photo/man3.png" class="team-mem">
-                        <h3>Angjelos Goga</h3>
-                        <p>Back-end developer</p>
-                      </div>
-                      <div class="team-slide">
-                        <img src="../Photo/man4.png"class="team-mem">
-                        <h3>Andi Sheta</h3>
-                        <p>Designer</p>
-                      </div>
-                  </div>
-                  
-                        <script>
-                      const carousel = document.querySelector('.team-carousel');
-                                const slides = document.querySelectorAll('.team-slide');
 
-                                let currentIndex = 0;
+            <script>
+                const carousel = document.querySelector('.team-carousel');
+                const slides = document.querySelectorAll('.team-slide');
 
-                                function showSlide(index) {
-                                slides.forEach((slide, i) => {
-                                    slide.style.transform = `translateX(${100 * (i - index)}%)`;
-                                });
-                                }
+                let currentIndex = 0;
 
-                                function showNextSlide() {
-                                currentIndex = (currentIndex + 1) % slides.length;
-                                showSlide(currentIndex);
-                                }
+                function showSlide(index) {
+                    slides.forEach((slide, i) => {
+                        slide.style.transform = `translateX(${100 * (i - index)}%)`;
+                    });
+                }
 
-                                function showPrevSlide() {
-                                currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-                                showSlide(currentIndex);
-                                }
+                function showNextSlide() {
+                    currentIndex = (currentIndex + 1) % slides.length;
+                    showSlide(currentIndex);
+                }
 
-                                setInterval(showNextSlide, 3000); // Change slide every 3 seconds
+                function showPrevSlide() {
+                    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+                    showSlide(currentIndex);
+                }
 
-                                showSlide(currentIndex);
+                setInterval(showNextSlide, 3000); // Change slide every 3 seconds
 
-                        </script>
+                showSlide(currentIndex);
+
+            </script>
+        </div>
+        <h1 class="abt-title">Where to find us?</h1>
+        <div class="about">
+            <div class="parag">
+                <p class="abt-txt">
+                    Don't miss out on the opportunity to explore the latest innovations and experience exceptional
+                    customer service.
+                    Visit Tech Haven today at 2203 E Empire St, Bloomington, IL 61704, USA, and let us redefine your
+                    tech journey. See you soon!
+                </p>
             </div>
-            <h1 class="abt-title">Where to find us?</h1>
-            <div class="about">   
-                <div class="parag">
-                    <p class="abt-txt">         
-                        Don't miss out on the opportunity to explore the latest innovations and experience exceptional customer service.
-                         Visit Tech Haven today at 2203 E Empire St, Bloomington, IL 61704, USA, and let us redefine your tech journey. See you soon!
-                     </p>
-                    </div>
 
-                 <img src="../Photo/location.webp" class="abt-photo">
+            <img src="../Photo/location.webp" class="abt-photo">
         </div>
         <div class="mapouter">
             <div class="gmap_canvas">
-                <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-                src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=2203 E Empire St, Bloomington, IL 61704, USA&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=2203 E Empire St, Bloomington, IL 61704, USA&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
                 </iframe>
             </div>
         </div>
@@ -129,7 +149,8 @@
                 <div class="footer-col">
                     <h4>Reach to Us</h4>
                     <ul>
-                        <li><a href="https://goo.gl/maps/Bk2WFKBgYETUSXpy7">2203 E. Empire Street, Suite J Bloomington, IL, USA 61704</a></li>
+                        <li><a href="https://goo.gl/maps/Bk2WFKBgYETUSXpy7">2203 E. Empire Street, Suite J Bloomington,
+                                IL, USA 61704</a></li>
                         <li><a href="#"> Phone: +355692085698</a></li>
                         <li><a href="#">Phone: +44-458-20-369</a></li>
                         <li><a href="#">Email: pcstore@yahoo.com</a></li>
@@ -165,9 +186,11 @@
                 </div>
             </div>
         </div>
-        <br><p class="footer-copyright">
+        <br>
+        <p class="footer-copyright">
             &copy; 2023 PC STORE. All rights reserved.
         </p>
-   </footer>
+    </footer>
 </body>
+
 </html>
