--- a/HTML/contactUs.html
+++ b/HTML/contactUs.html
@@ -43,7 +43,7 @@
                 
                 <i class="fa-solid fa-location-dot" style="color: rebeccapurple;"></i>
                 <h3>Visit Us!</h3>
-                <p>You can find us at <a href="#">location</a></p>
+                <p>You can find us at <a href="#iframe1">location</a></p>
             </div>
         </div>
         
@@ -56,7 +56,7 @@
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
                     <label for="message">Message</label>
-                    <textarea id="message" name="message" required style="resize: no;"></textarea>
+                    <textarea id="message" name="message" required ></textarea>
                     <button type="submit">Submit</button>
                 </form>
             </div>
@@ -65,7 +65,7 @@
 
     <div class="contactLastDiv">
         <div class="mapContainer">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2201.7511019479766!2d19.816541504740467!3d41.32799396967642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1690794435553!5m2!1sen!2s" width="100%" height="600px" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe id="iframe1" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2201.7511019479766!2d19.816541504740467!3d41.32799396967642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1690794435553!5m2!1sen!2s" width="100%" height="600px" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
