--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="../Photo/icon.ico" sizes="96x96" type="image/icon type">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/AbouUs.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/mainPageFooter.css">
 </head>
 
